Lots of changes. Color themes, new ropemode/ropemacs, etc

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/auto-complete"]
 	path = vendor/auto-complete
 	url = http://cx4a.org/repo/auto-complete.git/
+[submodule "vendor/textmate.el"]
+	path = vendor/textmate.el
+	url = git://github.com/defunkt/textmate.el.git
