--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "vendor/auto-complete"]
 	path = vendor/auto-complete
-	url = http://cx4a.org/repo/auto-complete.git/
+	url = http://github.com/m2ym/auto-complete.git
 [submodule "vendor/textmate.el"]
 	path = vendor/textmate.el
 	url = git://github.com/defunkt/textmate.el.git
